--- a/src/styles/SinglePost.css
+++ b/src/styles/SinglePost.css
@@ -21,19 +21,19 @@
   border-bottom: 3px solid rgb(204, 204, 204);
 }
 
-.uh {
-  margin: 2px 10px;
-  font-size: 15px;
-  opacity: 0.6;
-}
-
-.pt {
+.single-title {
   margin: 2px 10px;
   font-size: 50px;
   word-break: break-all;
 }
 
-.pc {
+.posted-by {
+  margin: 2px 10px;
+  font-size: 15px;
+  opacity: 0.6;
+}
+
+.content {
   width: 100%;
   padding: 35px 10px 10px 10px;
   font-size: 17px;
@@ -46,7 +46,7 @@
   overflow: hidden;
 }
 
-.areapc {
+.content-area {
   margin-top: 35px;
   padding: 8px;
   box-shadow: 3px 3px 10px rgba(5, 6, 7, 0.5);
@@ -62,7 +62,7 @@
   overflow-y: scroll;
 }
 
-.comms {
+.comments {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
